# lazypredict

./: .buildinfo  .bumpversion.cfg  .gitignore  .mcp.json  .readthedocs.yaml  .release-please-manifest.json  .travis.yml  404.html  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CICD_PIPELINE_AUDIT_AND_PLAN.md  CITATION.cff  CI_FAILURE_ANALYSIS.md  CI_FIX_TODO.md  CI_IMPLEMENTATION_SUMMARY.md  CI_STATUS_UPDATE.md  CLAUDE.md  CLEANUP_SUMMARY.md  CODE_OF_CONDUCT.md  COMMIT_MESSAGE.txt  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  HISTORY.rst  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_COMPLETE.md  ISSUE_CLOSURE_REPORT.md  LIBRARY_AUDIT_AND_IMPROVEMENT_PLAN.md  LICENSE  MANIFEST.in  MODERNIZATION_STATUS.md  Makefile  NEXT_STEPS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PRODUCTION_IMPROVEMENTS.md  PYTHON_3.14_MODERNIZATION_GUIDE.md  README.md  README.rst  (+45 more)
.circleci/: config.yml
.claude/: settings.local.json
.doctrees/: authors.doctree  contributing.doctree  environment.pickle  examples.doctree  history.doctree  index.doctree  installation.doctree  lazypredict.doctree  lazypredict.integrations.doctree  modules.doctree  readme.doctree  usage.doctree
.github/: CODEOWNERS  FUNDING.yml  ISSUE_TEMPLATE.md  copilot-instructions.md  issue-tracking-update.md  pull_request_template.md
.github/scripts/: requirements.txt  update_citations.py
.github/workflows/: auto-release.yml  build.yml  ci.yml  codeql-analysis.yml  conda-build.yml  conda-forge.yml  dev-prerelease.yml  docs.yml  patch-release.yml  publish.yml  release-please.yml  update_citations.yml
_modules/: index.html
_modules/lazypredict/: Supervised.html  TimeSeriesForecasting.html  _base.html  config.html  exceptions.html  metrics.html  preprocessing.html  ts_preprocessing.html
_sources/: index.rst.txt  lazypredict.integrations.rst.txt  readme.rst.txt  usage.rst.txt
_static/: documentation_options.js
advanced/: index.html
api/integrations/: index.html
api/lazypredict/: index.html
app/: README.md  app.py  predictor_selection_test.py  requirements.txt
authors/: index.html
benchmarks/: benchmark_suite.py  profile_supervised.py
conda-forge/: meta.yaml
conda-recipe/: meta.yaml
contributing/: index.html
docs/: Makefile  advanced.md  authors.md  authors.rst  conf.py  contributing.md  contributing.rst  examples.md  examples.rst  explainability.rst  forecasting.md  history.md  history.rst  index.md  index.rst  installation.md  installation.rst  lazypredict.rst  make.bat  modules.rst  readme.rst  requirements.txt  usage.md  usage.rst
docs/api/: integrations.md  lazypredict.md
docs/source/: conf.py  index.rst  lazypredict.models.rst  lazypredict.rst  lazypredict.utils.rst  modules.rst
examples/: anomaly_detection_example.py  causal_analysis_example.py  classification_example.py  clustering_example.py  index.html  regression_example.py  time_series_example.py  timeseries_example.py
forecasting/: index.html
gh-pages/: authors.html  contributing.html  objects.inv  search.html  searchindex.js
history/: index.html
installation/: index.html
lazypredict/: Eda.py  Explainer.py  Supervised.py  TimeSeriesForecasting.py  __init__.py  _base.py  base.py  classification  cli.py  config.py  distributed.py  ensemble.py  exceptions.py  explainability.py  horizon.py  meta.yaml  metrics.py  preprocessing.py  regression.py  search_spaces.py  spark.py  supervised.py  ts_diagnostics.py  ts_preprocessing.py  ts_search_spaces.py  ts_tuning.py  ts_visualization.py  tuning.py  utils.py
lazypredict/estimators/: __init__.py  anomaly_detection.py  base.py  causal_analysis.py  classification.py  clustering.py  regression.py  time_series.py
lazypredict/explainability/: __init__.py  base.py  feature_importance.py  lime_explainer.py  partial_dependence.py  permutation_importance.py  shap_explainer.py
lazypredict/integrations/: __init__.py  mlflow.py
lazypredict/metrics/: __init__.py  anomaly_detection_metrics.py  base.py  causal_analysis_metrics.py  classification_metrics.py  clustering_metrics.py  regression_metrics.py  time_series_metrics.py
lazypredict/mlflow_integration/: __init__.py  base.py  mlflow_logger.py
lazypredict/models/: __init__.py  classification.py  model_registry.py  ordinal.py  regression.py  sequence.py  survival.py
lazypredict/preprocessing/: __init__.py  base.py  feature_engineering.py  feature_selection.py  (+1 more)
recipe/: meta.yaml
search/: search_index.json
tests/: __init__.py  conftest.py  run_tests.py  test_base.py  test_categorical_encoder.py  test_classification.py  test_cli.py  test_config.py  test_exceptions.py  test_explainer.py  test_helpers.py  test_init.py  test_integration.py  test_lazypredict.py  test_model_registry.py  test_models.py  test_multiclass.py  test_new_features.py  test_regression.py  test_roadmap_features.py  test_supervised.py  test_supervised_comprehensive.py  test_timeseries.py  test_utils.py
usage/: index.html
vscode-extension/: .gitignore  .vscodeignore  LICENSE  PROJECT_STATUS.md  jest.setup.js  package-lock.json  package.json
(+60 files in other folders)
