[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazypredict"
dynamic = ["version"]
authors = [
    { name = "Shankar Rao Pandala", email = "shankar.pandala@live.com" },
]
description = "Lazy Predict helps build a lot of basic models without much code and helps understand which models work better without any parameter tuning"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["lazypredict", "machine learning", "data science", "automated machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.17.0",
    "pandas>=1.0.0",
    "tqdm>=4.45.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.0.0",
    "lightgbm>=3.0.0",
]

[project.optional-dependencies]
mlflow = ["mlflow>=1.0.0"]
optuna = ["optuna>=2.0.0"]
gpu = ["torch>=1.0.0", "cuml>=21.0.0"]
survival = ["scikit-survival>=0.15.0"]
dev = [
    "pytest>=5.0.0",
    "pytest-runner>=5.0.0",
    "black>=20.8b1",
    "isort>=5.0.0",
    "mypy>=0.800",
    "flake8>=3.8.0",
    "sphinx>=3.0.0",
    "twine>=3.0.0",
    "pre-commit>=2.9.0",
    "bump2version>=1.0.0",
    "coverage>=5.0.0",
]
all = ["lazypredict[mlflow,optuna,gpu,survival]"]

[project.urls]
Homepage = "https://github.com/shankarpandala/lazypredict"
Documentation = "https://lazypredict.readthedocs.io"
Repository = "https://github.com/shankarpandala/lazypredict.git"

[project.scripts]
lazypredict = "lazypredict.cli:main"

[tool.setuptools]
packages = [
    "lazypredict",
    "lazypredict.models",
    "lazypredict.utils",
]

[tool.setuptools.dynamic]
version = {attr = "lazypredict.__version__"}

[tool.black]
line-length = 100
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true