[build-system]
requires = ["setuptools>=64,<75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lazypredict"
version = "0.3.0a5"
description = "Lazy Predict helps build a lot of basic models without much code and helps understand which models work better without any parameter tuning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    { name = "Shankar Rao Pandala", email = "shankar.pandala@live.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click",
    "scikit-learn>=1.0",
    "pandas>=1.3",
    "tqdm>=4.0",
    "joblib>=1.0",
    "numpy>=1.21",
]

[project.optional-dependencies]
boost = [
    "xgboost>=1.5",
    "lightgbm>=3.0",
    "catboost>=1.0",
]
mlflow = [
    "mlflow>=2.0.0,<3.0",
]
timeseries = [
    "statsmodels>=0.13",
    "pmdarima>=2.0",
]
deeplearning = [
    "torch>=2.0",
]
foundation = [
    "timesfm",
]
tune = [
    "optuna>=3.0",
]
viz = [
    "matplotlib>=3.5",
]
explain = [
    "shap>=0.42",
]
interpret = [
    "interpret>=0.4",
]
flaml = [
    "flaml>=2.0",
]
spark = [
    "pyspark>=3.3",
]
all = [
    "xgboost>=1.5",
    "lightgbm>=3.0",
    "catboost>=1.0",
    "mlflow>=2.0.0,<3.0",
    "category_encoders>=2.0",
    "statsmodels>=0.13",
    "pmdarima>=2.0",
    "torch>=2.0",
    "timesfm",
    "optuna>=3.0",
    "shap>=0.42",
    "interpret>=0.4",
    "matplotlib>=3.5",
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "flake8>=6",
    "mypy>=1.0",
    "optuna>=3.0",
]

[project.scripts]
lazypredict = "lazypredict.cli:main"

[project.urls]
Homepage = "https://github.com/shankarpandala/lazypredict"
Documentation = "https://lazypredict.readthedocs.io"
Repository = "https://github.com/shankarpandala/lazypredict"
Issues = "https://github.com/shankarpandala/lazypredict/issues"

[tool.setuptools.packages.find]
include = ["lazypredict*"]

[tool.setuptools.package-data]
lazypredict = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
max-complexity = 10
